--- a/package.json
+++ b/package.json
@@ -11,41 +11,50 @@
     "lint": "yarn lint:js && yarn lint:style && yarn typecheck"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@nuxtjs/i18n": "^10.1.0",
     "@nuxtjs/stylelint-module": "^5.2.1",
     "@pinia/nuxt": "^0.11.2",
+    "@prisma/client": "^6.17.1",
+    "@sidebase/nuxt-auth": "^1.1.0",
     "@vee-validate/nuxt": "^4.15.1",
     "@vee-validate/yup": "^4.15.1",
     "@vueuse/nuxt": "^13.9.0",
-    "eslint": "^9.36.0",
-    "nuxt": "^4.1.2",
-    "maska": "^2.1.10",
+    "bcryptjs": "^3.0.2",
     "dompurify": "^3.0.3",
+    "eslint": "^9.36.0",
+    "maska": "^2.1.10",
+    "next-auth": "^4.21.1",
+    "nodemailer": "^6.10.1",
+    "nuxt": "^4.1.2",
     "nuxt-module-hotjar": "^1.3.4",
     "pinia": "^3.0.3",
     "postcss": "^8.5.6",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/types": "^2.18.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/stylelint-module": "^5.2.1",
-    "@nuxtjs/tailwindcss": "^6.13.1",
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@types/dompurify": "^3.0.2",
+    "@types/nodemailer": "^7.0.2",
     "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.21",
     "postcss-html": "^1.8.0",
+    "prisma": "^6.17.1",
     "sass": "^1.93.2",
-    "@types/dompurify": "^3.0.2",
-    "stylelint-config-recommended-vue": "^1.6.1",
-    "vite-plugin-stylelint": "^6.0.2",
     "stylelint": "^14.2.0",
+    "stylelint-config-recommended-vue": "^1.6.1",
     "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.1.0",
-    "stylelint-config-standard-scss": "^3.0.0"
+    "vite-plugin-stylelint": "^6.0.2"
   }
 }
