[FTL-7] fixes && refactoring

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "nuxt build",
+    "build": "prisma generate && nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
+    "postinstall": "nuxt prepare && prisma generate",
     "seed:products": "ts-node scripts/seeds/products.ts",
     "lint": "yarn lint:js && yarn lint:style && yarn typecheck"
   },
