--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   "dependencies": {
     "@ant-design-vue/nuxt": "^1.4.6",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@nuxtjs/i18n": "^10.1.0",
-    "@nuxtjs/stylelint-module": "^5.2.1",
     "@pinia/nuxt": "^0.11.2",
+    "@popperjs/core": "^2.11.8",
     "@prisma/client": "^6.17.1",
     "@sidebase/nuxt-auth": "^1.1.0",
     "@vee-validate/nuxt": "^4.15.1",
@@ -24,30 +23,27 @@
     "@vueuse/nuxt": "^13.9.0",
     "ant-design-vue": "4.x",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^2.30.0",
     "dompurify": "^3.0.3",
     "eslint": "^9.36.0",
     "maska": "^2.1.10",
     "next-auth": "^4.21.1",
     "nodemailer": "^6.10.1",
-    "nuxt": "^4.1.2",
-    "nuxt-module-hotjar": "^1.3.4",
+    "nuxt": "^4.2.2",
     "pinia": "^3.0.3",
     "postcss": "^8.5.6",
+    "v-calendar": "^3.0.3",
     "vee-validate": "^4.15.1",
-    "date-fns": "^2.30.0",
     "vue": "^3.5.21",
+    "vue-multiselect": "^3.0.0-beta.2",
     "vue-router": "^4.5.1",
     "yup": "^1.7.1",
-    "vue-multiselect": "^3.0.0-beta.2",
-    "v-calendar": "^3.0.3",
-    "@popperjs/core": "^2.11.8",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/types": "^2.18.1",
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@nuxtjs/stylelint-module": "^5.2.1",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/dompurify": "^3.0.2",
     "@types/nodemailer": "^7.0.2",
@@ -56,14 +52,7 @@
     "postcss-html": "^1.8.0",
     "prisma": "^6.17.1",
     "sass": "^1.93.2",
-    "stylelint": "^14.2.0",
-    "stylelint-config-recommended-vue": "^1.6.1",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "vite-plugin-stylelint": "^6.0.2"
+    "typescript": "^5.9.3"
   }
 }
